<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Arise</string>

    <!--Titles-->
    <!-- Title for the activity to add a new goal [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_goal">Create New Goal</string>
    <!-- Title for the activity to add a new goal [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_goal">Edit Goal</string>

    <!-- Name of the overview title in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_title_overview">Overview</string>
    <!-- Name of the schedule title in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_title_schedule">Schedule</string>
    <!-- Name of the measurement title in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_title_measurement">Measurement</string>

    <!-- Label for editor menu option to save goal and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current goal [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_name">Name</string>

    <!-- Label for editor menu option to create new goal [CHAR LIMIT=20] -->
    <string name="action_new_goal">New Goal</string>

    <!--Labels-->
    <!-- Name of the name label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_name">Name</string>
    <!-- Name of the units label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_units">Units</string>
    <!-- Name of the interval label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_interval">Interval</string>
    <!-- Name of the goal type label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_goal_type">Goal Type</string>
    <!-- Name of the frequency label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_frequency">Frequency</string>
    <!-- Name of the deadline label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_deadline">Deadline</string>
    <!-- Name of the measurable label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_priority">Priority</string>
    <!-- Name of the measurable label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_measurable">Measurable</string>
    <!-- Name of the classification lable in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_classification">Classification</string>
    <!-- Name of the intention label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_intention">Intention</string>
    <!-- Name of the quota label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_quota">Quota</string>
    <!-- Name of the pin label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_pin">Pin to List</string>
    <!-- Name of the pin label in the goal editor [CHAR LIMIT=15] -->
    <string name="goal_editor_label_sessions">Sessions</string>

    <!-- Goal Frequencies-->
    <!-- Name of the goal frequency daily [CHAR LIMIT=15] -->
    <string name="goal_frequency_daily">Daily</string>
    <!-- Name of the goal frequency weekly [CHAR LIMIT=15] -->
    <string name="goal_frequency_weekly">Weekly</string>
    <!-- Name of the goal frequency monthly [CHAR LIMIT=15] -->
    <string name="goal_frequency_monthly">Monthly</string>
    <!-- Name of the goal frequency fixed [CHAR LIMIT=15] -->
    <string name="goal_frequency_fixed">Fixed</string>

    <!-- Goal Classification-->
    <!-- Name of the goal classification habit [CHAR LIMIT=15] -->
    <string name="goal_classification_habit">Habit</string>
    <!-- Name of the goal classification task [CHAR LIMIT=15] -->
    <string name="goal_classification_task">Task</string>
    <!-- Name of the goal classification [CHAR LIMIT=15] -->
    <string name="goal_classification_workout">Workout</string>
    <!-- Name of the goal classification [CHAR LIMIT=15] -->
    <string name="goal_classification_event">Event</string>
    <!-- Name of the goal classification [CHAR LIMIT=15] -->
    <string name="goal_classification_tracker">Tracker</string>

    <!-- Goal Priorities-->
    <!-- Name of the goal priority very low [CHAR LIMIT=15] -->
    <string name="goal_priority_very_low">Very Low</string>
    <!-- Name of the goal priority low [CHAR LIMIT=15] -->
    <string name="goal_priority_low">Low</string>
    <!-- Name of the goal priority low [CHAR LIMIT=15] -->
    <string name="goal_priority_medium">Medium</string>
    <!-- Name of the goal priority high [CHAR LIMIT=15] -->
    <string name="goal_priority_high">High</string>
    <!-- Name of the goal priority very high [CHAR LIMIT=15] -->
    <string name="goal_priority_very_high">Very High</string>

    <!-- Goal Units-->
    <string name="goal_unit_hour_plural">hours</string>
    <string name="goal_unit_minute_plural">minutes</string>
    <string name="goal_unit_second_plural">seconds</string>
    <string name="goal_unit_hour_singular">hour</string>
    <string name="goal_unit_minute_singular">minute</string>
    <string name="goal_unit_second_singular">second</string>
    <string name="goal_unit_time_plural">times</string>
    <string name="goal_unit_time_singular">time</string>
    <string name="goal_unit_rep_plural">reps</string>
    <string name="goal_unit_rep_singular">rep</string>
    <string name="goal_unit_page_plural">pages</string>
    <string name="goal_unit_page_singular">page</string>


    <!-- Goal Intentions-->
    <!-- Name of the goal intention for regular goals[CHAR LIMIT=15] -->
    <string name="goal_intention_building">Build a habit</string>
    <!-- Name of the goal intention for avoidance goals [CHAR LIMIT=15] -->
    <string name="goal_intention_avoidance">Break a habit</string>
    <!-- Name of the goal intention for tracking goal gains [CHAR LIMIT=15] -->
    <string name="goal_intention_gain">Gain</string>
    <!-- Name of the goal intention for tracking goal losses [CHAR LIMIT=15] -->
    <string name="goal_intention_lose">Lose</string>

    <!-- GoalList Menu Options -->
    <string name="menu_option_delete_all">Delete All Goals</string>
    <string name="menu_option_show_all">Show All Goals</string>
    <string name="menu_option_show_today">Show Today\'s Goals</string>
    <string name="menu_option_create_dummy">Create Dummy Goals</string>


    <!-- Input Field Text Hints -->
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_goal_name">Enter the name of your goal</string>
    <!-- Text hint for quota field in the editor [CHAR LIMIT=30] -->
    <string name="hint_goal_quota">3</string>
    <!-- Text hint for sessions field in the editor [CHAR LIMIT=30] -->
    <string name="hint_goal_sessions">4</string>


    <!-- Labels for Bottom Navigation Bar -->
    <!-- Label for the Profile Nav Bar Button [CHAR LIMIT=10] -->
    <string name="nav_bar_profile">Profile</string>
    <!-- Label for the Goal List Nav Bar Button [CHAR LIMIT=10] -->
    <string name="nav_bar_goal_list">Goals</string>
    <!-- Label for the Workout Nav Bar Button [CHAR LIMIT=10] -->
    <string name="nav_bar_workouts">Workouts</string>
    <!-- Label for the Goal Overview Nav Bar Button [CHAR LIMIT=10] -->
    <string name="nav_bar_goal_overview">Overview</string>
    <!-- Label for the Goal Settings Nav Bar Button [CHAR LIMIT=10] -->
    <string name="nav_bar_goal_settings">Settings</string>
    <!-- Label for the Goal Progression Nav Bar Button [CHAR LIMIT=10] -->
    <string name="nav_bar_goal_progression">Progression</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
