<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_goal"
        android:title="@string/action_new_goal"
        android:icon="@drawable/ic_action_add_circle_outline"
        app:showAsAction="ifRoom"/>
<!--    <item-->
<!--        android:id="@+id/action_edit_goal"-->
<!--        android:title="Edit Goal"-->
<!--        app:showAsAction="collapseActionView" />-->
<!--    <item-->
<!--        android:id="@+id/action_delete_goal"-->
<!--        android:title="Delete Goal"-->
<!--        app:showAsAction="collapseActionView" />-->
    <item
        android:id="@+id/action_show_all_goals"
        android:title="@string/menu_option_show_all"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_delete_all_goals"
        android:title="@string/menu_option_delete_all"
        app:showAsAction ="never" />
    <item
        android:id="@+id/create_dummy_goals"
        android:title="@string/menu_option_create_dummy"
        app:showAsAction ="collapseActionView" />


</menu>