<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/darkmodeBackground">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingBottom="4dp"
    android:paddingTop="8dp"
    android:background="@color/darkmodeBackground"
    tools:context=".Activities.GoalEditorActivity">
    <!-- Name field -->
    <EditText
        android:id="@+id/edit_goal_name"
        android:hint="@string/hint_goal_name"
        android:inputType="textCapWords"
        android:textSize="30dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@android:color/transparent"
        style="@style/GoalEditorFieldStyle" />

    <!-- Horizontal Line -->
    <View
        style="@style/GoalEditorSeparatorStyle"/>

    <!-- ~~~~~~~~~~~~~~~~~ Overview Tab ~~~~~~~~~~~~~~~~~~~-->
    <LinearLayout
        style="@style/GoalEditorCategoryCardStyle">

    <TextView
        style="@style/GoalEditorLabelStyle"
        android:text="@string/goal_editor_title_overview"
        />

    <!-- Goal Classification Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/goal_editor_label_classification"
            style="@style/GoalEditorCategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- GoalType drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_goal_classification"
                style="@style/GoalEditorSpinnerStyle"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- Goal Intention Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/goal_editor_label_intention"
            style="@style/GoalEditorCategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- GoalType drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_goal_intention"
                style="@style/GoalEditorSpinnerStyle"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- Goal Priority Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/goal_editor_label_priority"
            style="@style/GoalEditorCategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- GoalType drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_goal_priority"
                style="@style/GoalEditorSpinnerStyle"
                />
        </LinearLayout>
    </LinearLayout>

    <!--&lt;!&ndash; Description of Intention &ndash;&gt;-->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
    <!--<TextView-->
        <!--android:text="@string/goal_editor_label_name"-->
        <!--style="@style/GoalEditorCategoryStyle" />-->
    <!--</LinearLayout>-->

    <!-- Measurable Row -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <!-- Label -->
        <TextView
            style="@style/GoalEditorCategoryStyle"
            android:text="@string/goal_editor_label_measurable" />

        <!-- Input field -->
        <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:paddingLeft="4dp"
        android:orientation="vertical" >

        <CheckBox
        android:id="@+id/measurableCheckBox"
        android:layout_width="match_parent"
        android:buttonTint="@color/darkmodeTextDark"
        android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Measurable Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/GoalEditorCategoryStyle"
            android:text="@string/goal_editor_label_pin" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical"
            android:layout_gravity="bottom">

            <CheckBox
                android:id="@+id/pinCheckBox"
                android:layout_width="match_parent"
                android:buttonTint="@color/darkmodeTextDark"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

    <!-- Horizontal Line -->
    <View
        style="@style/GoalEditorSeparatorStyle"/>

    <!-- ~~~~~~~~~~~~~~~~ Schedule Tab ~~~~~~~~~~~~~~~~~~~ -->
    <LinearLayout
        style="@style/GoalEditorCategoryCardStyle">

        <TextView
            style="@style/GoalEditorLabelStyle"
            android:text="@string/goal_editor_title_schedule"
            />


        <!-- Goal Frequency Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/goal_editor_label_frequency"
                style="@style/GoalEditorCategoryStyle" />

            <!-- Input field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:orientation="vertical">

                <!-- GoalType drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_goal_frequency"
                    style="@style/GoalEditorSpinnerStyle"
                    />
            </LinearLayout>
        </LinearLayout>

        <!-- Deadline Frequency Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/goal_editor_label_deadline"
                style="@style/GoalEditorCategoryStyle" />

            <!-- Input field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/deadline_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="pick deadline"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <!-- Horizontal Line -->
    <View
        style="@style/GoalEditorSeparatorStyle"/>

    <!-- ~~~~~~~~~~~~~~~~ Measurement Tab ~~~~~~~~~~~~~~~~~-->
    <LinearLayout
        style="@style/GoalEditorCategoryCardStyle">

        <TextView
            style="@style/GoalEditorLabelStyle"
            android:text="@string/goal_editor_title_measurement"
            />


        <!-- Goal Units Row -->
        <LinearLayout
            android:id="@+id/units_layout_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/goal_editor_label_units"
                style="@style/GoalEditorCategoryStyle" />

            <!-- Input field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:orientation="vertical">

                <!-- Units drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_goal_units"
                    style="@style/GoalEditorSpinnerStyle"
                    />
            </LinearLayout>
        </LinearLayout>

        <!-- Quota Row -->
        <LinearLayout
            android:id="@+id/quota_layout_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Quota Label -->
            <TextView
                android:text="@string/goal_editor_label_quota"
                style="@style/GoalEditorCategoryStyle" />

            <!-- Input field -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_goal_quota"
                    android:hint="@string/hint_goal_quota"
                    android:inputType="number"
                    style="@style/GoalEditorFieldStyle" />

                <!-- Units for quota -->
                <TextView
                    android:id="@+id/label_quota_units"
                    android:text="minutes/week"
                    style="@style/GoalEditorUnitsStyle"/>
            </RelativeLayout>
        </LinearLayout>

        <!-- Sessions Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Quota Label -->
            <TextView
                android:text="@string/goal_editor_label_sessions"
                style="@style/GoalEditorCategoryStyle" />

            <!-- Input field -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_goal_sessions"
                    android:hint="@string/hint_goal_sessions"
                    android:inputType="number"
                    style="@style/GoalEditorFieldStyle" />

                <!-- Units for quota -->
                <TextView
                    android:id="@+id/label_sessions_units"
                    android:text="sessions/week"
                    style="@style/GoalEditorUnitsStyle"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- Horizontal Line -->
    <View
        style="@style/GoalEditorSeparatorStyle"/>


</LinearLayout>
    </ScrollView>
